--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,24 +2,17 @@ backend:
   name: git-gateway
   branch: master
 media_folder: static/media
-public_folder: /media
+public_folder: media
 collections:
-  - name: 'posts'
-    label: 'Posts'
-    label_singular: 'Post'
-    folder: content/posts
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    path: '{{slug}}/index'
-    media_folder: ''
-    public_folder: ''
+    editor:
+     preview: false
     fields:
-      - label: 'Title'
-        name: 'title'
-        widget: 'string'
-      - label: 'Cover Image'
-        name: 'image'
-        widget: 'image'
-      - label: 'Body'
-        name: 'body'
-        widget: 'markdown'
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
