--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,7 @@ collections:
   label: Posts
   label_singular: 'Post'
   folder: content/posts
+  create: true
   path: '{{slug}}/index'
   media_folder: ''
   public_folder: ''
